--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <!--这个标签会被替换为项目中所有的 javascript 文件。删除 game_files 标签后，项目文件加载列表将不会变化，请谨慎操作！-->
     <!--game_files_start-->
 	<script egret="game" src="debug/src/Main.js"></script>
-	<script egret="game" src="debug/src/Sample_CreateView3D.js"></script>
-	<script egret="game" src="debug/src/Sample_CreateSky.js"></script>
-	<script egret="game" src="debug/src/Sample_CreateBox.js"></script>
+	<script egret="game" src="debug/src/CreateView3D.js"></script>
+	<script egret="game" src="debug/src/CreateSky.js"></script>
+	<script egret="game" src="debug/src/CreateBox.js"></script>
 	<!--game_files_end-->
     <img id="t1" src="resource/sky/cloudy_noon_FR.png" hidden="hidden" />
     <img id="t2" src="resource/sky/cloudy_noon_BK.png" hidden="hidden" />
