--- a/index.html
+++ b/index.html
@@ -19,18 +19,13 @@
             height: 100%;
         }
     </style>
-
-    <!--这个标签为通过egret提供的第三方库的方式生成的 javascript 文件。删除 modules_files 标签后，库文件加载列表将不会变化，请谨慎操作！-->
     <!--modules_files_start-->
-	<script egret="lib" src="libs/modules/egret/egret.js" src-release="libs/modules/egret/egret.min.js"></script>
-	<script egret="lib" src="libs/modules/egret/egret.web.js" src-release="libs/modules/egret/egret.web.min.js"></script>
+	<script egret="lib" src="libs/modules/egret/egret.min.js" src-release="libs/modules/egret/egret.min.js"></script>
+	<script egret="lib" src="libs/modules/egret/egret.web.min.js" src-release="libs/modules/egret/egret.web.min.js"></script>
 	<!--modules_files_end-->
-
-    <!--这个标签为不通过egret提供的第三方库的方式使用的 javascript 文件，请将这些文件放在libs下，但不要放在modules下面。-->
     <!--other_libs_files_start-->
     <!--other_libs_files_end-->
     <script egret="game" src="egret3d.js"></script>  
-    <!--这个标签会被替换为项目中所有的 javascript 文件。删除 game_files 标签后，项目文件加载列表将不会变化，请谨慎操作！-->
     <!--game_files_start-->
 	<script egret="game" src="debug/src/Main.js"></script>
 	<script egret="game" src="debug/src/CreateView3D.js"></script>
@@ -45,7 +40,6 @@
     <img id="t6" src="resource/sky/cloudy_noon_DN.png" hidden="hidden" />
 </head>
 <body>
-
     <div style="margin: auto;width: 0%;height: 0%;" class="egret-player"
          data-entry-class="Main"
          data-orientation="auto"
@@ -55,11 +49,9 @@
          data-content-height="960"
          data-show-paint-rect="false"
          data-multi-fingered="2"
-         data-show-fps="true" data-show-log="false"
+         data-show-fps="true" data-show-log="true"
          data-log-filter="" data-show-fps-style="x:0,y:0,size:30,textColor:0x00c200,bgAlpha:0.9">
     </div>
-    <script>
-        egret.runEgret();
-    </script>
+    <script> egret.runEgret(); </script>
 </body>
 </html>
