字体生成纹理OK

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <img id="t4" src="resource/sky/cloudy_noon_RT.png" hidden="hidden" />
     <img id="t5" src="resource/sky/cloudy_noon_UP.png" hidden="hidden" />
     <img id="t6" src="resource/sky/cloudy_noon_DN.png" hidden="hidden" />
+    <img id="c0" src="resource/chars/chars.jpg" hidden="hidden" />
 </head>
 <body>
     <div style="margin: auto;width: 0%;height: 0%;" class="egret-player"
