--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script egret="game" src="egret3d.js"></script>  
     <!--game_files_start-->
 	<script egret="game" src="debug/src/Main.js"></script>
+	<script egret="game" src="debug/src/CharTexture.js"></script>
 	<script egret="game" src="debug/src/CreateView3D.js"></script>
 	<script egret="game" src="debug/src/CreateSky.js"></script>
 	<script egret="game" src="debug/src/CreateBox.js"></script>
@@ -38,7 +39,6 @@
     <img id="t4" src="resource/sky/cloudy_noon_RT.png" hidden="hidden" />
     <img id="t5" src="resource/sky/cloudy_noon_UP.png" hidden="hidden" />
     <img id="t6" src="resource/sky/cloudy_noon_DN.png" hidden="hidden" />
-    <img id="c0" src="resource/chars/chars.jpg" hidden="hidden" />
 </head>
 <body>
     <div style="margin: auto;width: 0%;height: 0%;" class="egret-player"
