使用EgretWing编译引擎，项目代码后

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
         }
     </style>
     <!--modules_files_start-->
-	<script egret="lib" src="libs/modules/egret/egret.min.js" src-release="libs/modules/egret/egret.min.js"></script>
-	<script egret="lib" src="libs/modules/egret/egret.web.min.js" src-release="libs/modules/egret/egret.web.min.js"></script>
+	<script egret="lib" src="libs/modules/egret/egret.js" src-release="libs/modules/egret/egret.min.js"></script>
+	<script egret="lib" src="libs/modules/egret/egret.web.js" src-release="libs/modules/egret/egret.web.min.js"></script>
 	<!--modules_files_end-->
     <!--other_libs_files_start-->
     <!--other_libs_files_end-->
     <script egret="game" src="egret3d.js"></script>  
     <!--game_files_start-->
-	<script egret="game" src="debug/src/Main.js"></script>
-	<script egret="game" src="debug/src/CharTexture.js"></script>
-	<script egret="game" src="debug/src/CreateView3D.js"></script>
-	<script egret="game" src="debug/src/CreateSky.js"></script>
-	<script egret="game" src="debug/src/CreateBox.js"></script>
+	<script egret="game" src="bin-debug/CharTexture.js"></script>
+	<script egret="game" src="bin-debug/CreateView3D.js"></script>
+	<script egret="game" src="bin-debug/CreateSky.js"></script>
+	<script egret="game" src="bin-debug/CreateBox.js"></script>
+	<script egret="game" src="bin-debug/Main.js"></script>
 	<!--game_files_end-->
     <img id="t1" src="resource/sky/cloudy_noon_FR.png" hidden="hidden" />
     <img id="t2" src="resource/sky/cloudy_noon_BK.png" hidden="hidden" />
