ajuest x, y, z move rotation

--- a/index.html
+++ b/index.html
@@ -10,14 +10,7 @@
     <meta name="x5-fullscreen" content="true"/>
     <meta name="360-fullscreen" content="true"/>
     <style>
-        html, body {
-            -ms-touch-action: none;
-            background: #888888;
-            padding: 0;
-            border: 0;
-            margin: 0;
-            height: 100%;
-        }
+        html, body { -ms-touch-action: none; background: #888888; padding: 0; border: 0; margin: 0; height: 100%; }
     </style>
     <!--modules_files_start-->
 	<script egret="lib" src="libs/modules/egret/egret.js" src-release="libs/modules/egret/egret.min.js"></script>
@@ -41,16 +34,16 @@
     <img id="t6" src="resource/sky/cloudy_noon_DN.png" hidden="hidden" />
 </head>
 <body>
-    <div style="margin: auto;width: 0%;height: 0%;" class="egret-player"
+    <div style="margin:auto;width:0%;height:0%;" class="egret-player"
          data-entry-class="Main"
          data-orientation="auto"
-         data-scale-mode="noScale"
+         data-scale-mode="showAll"
          data-frame-rate="30"
          data-content-width="640"
          data-content-height="960"
          data-show-paint-rect="false"
          data-multi-fingered="2"
-         data-show-fps="true" data-show-log="true"
+         data-show-fps="false" data-show-log="false"
          data-log-filter="" data-show-fps-style="x:0,y:0,size:30,textColor:0x00c200,bgAlpha:0.9">
     </div>
     <script> egret.runEgret(); </script>
