make min for e3d

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         html, body { -ms-touch-action: none; background: #888888; padding: 0; border: 0; margin: 0; height: 100%; }
     </style>
     <!--modules_files_start-->
-	<script egret="lib" src="libs/modules/egret/egret.js" src-release="libs/modules/egret/egret.min.js"></script>
-	<script egret="lib" src="libs/modules/egret/egret.web.js" src-release="libs/modules/egret/egret.web.min.js"></script>
+	<script egret="lib" src="libs/modules/egret/egret.min.js" src-release="libs/modules/egret/egret.min.js"></script>
+	<script egret="lib" src="libs/modules/egret/egret.web.min.js" src-release="libs/modules/egret/egret.web.min.js"></script>
 	<!--modules_files_end-->
     <!--other_libs_files_start-->
     <!--other_libs_files_end-->
-    <script egret="game" src="egret3d.js"></script>  
+    <script egret="game" src="egret3d.min.js"></script>  
     <!--game_files_start-->
 	<script egret="game" src="bin-debug/CharTexture.js"></script>
 	<script egret="game" src="bin-debug/CreateView3D.js"></script>
