--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <!--modules_files_start-->
 	<script egret="lib" src="libs/modules/egret/egret.min.js" src-release="libs/modules/egret/egret.min.js"></script>
 	<script egret="lib" src="libs/modules/egret/egret.web.min.js" src-release="libs/modules/egret/egret.web.min.js"></script>
+    <script egret="lib" src="libs/modules/egret/egret3d.min.js" src-release="libs/modules/egret/egret.web.min.js"></script>  
 	<!--modules_files_end-->
     <!--other_libs_files_start-->
     <!--other_libs_files_end-->
-    <script egret="game" src="egret3d.min.js"></script>  
     <!--game_files_start-->
 	<script egret="game" src="bin-debug/CharTexture.js"></script>
 	<script egret="game" src="bin-debug/CreateView3D.js"></script>
