add game framework code files for game data

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <!--other_libs_files_start-->
     <!--other_libs_files_end-->
     <!--game_files_start-->
+	<script egret="game" src="bin-debug/GameDataDriver.js"></script>
+	<script egret="game" src="bin-debug/FindXDataDriver.js"></script>
 	<script egret="game" src="bin-debug/CharTexture.js"></script>
 	<script egret="game" src="bin-debug/CreateView3D.js"></script>
 	<script egret="game" src="bin-debug/CreateSky.js"></script>
