--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
         html, body { -ms-touch-action: none; background: #888888; padding: 0; border: 0; margin: 0; height: 100%; }
     </style>
     <!--modules_files_start-->
-	<script egret="lib" src="libs/modules/egret/egret.min.js" src-release="libs/modules/egret/egret.min.js"></script>
-	<script egret="lib" src="libs/modules/egret/egret.web.min.js" src-release="libs/modules/egret/egret.web.min.js"></script>
-    <script egret="lib" src="libs/modules/egret/egret3d.min.js" src-release="libs/modules/egret/egret.web.min.js"></script>  
+	<script egret="lib" src="libs/modules/egret/egret.js" src-release="libs/modules/egret/egret.min.js"></script>
+	<script egret="lib" src="libs/modules/egret/egret.web.js" src-release="libs/modules/egret/egret.web.min.js"></script>
 	<!--modules_files_end-->
     <!--other_libs_files_start-->
     <!--other_libs_files_end-->
     <!--game_files_start-->
-	<script egret="game" src="bin-debug/GameDataDriver.js"></script>
-	<script egret="game" src="bin-debug/FindXDataDriver.js"></script>
 	<script egret="game" src="bin-debug/CharTexture.js"></script>
 	<script egret="game" src="bin-debug/CreateView3D.js"></script>
 	<script egret="game" src="bin-debug/CreateSky.js"></script>
 	<script egret="game" src="bin-debug/CreateBox.js"></script>
+	<script egret="game" src="bin-debug/GameDataDriver.js"></script>
+	<script egret="game" src="bin-debug/FindXDataDriver.js"></script>
 	<script egret="game" src="bin-debug/Main.js"></script>
 	<!--game_files_end-->
     <img id="t1" src="resource/sky/cloudy_noon_FR.png" hidden="hidden" />
