fixed bugs in index.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!--modules_files_start-->
 	<script egret="lib" src="libs/modules/egret/egret.js" src-release="libs/modules/egret/egret.min.js"></script>
 	<script egret="lib" src="libs/modules/egret/egret.web.js" src-release="libs/modules/egret/egret.web.min.js"></script>
+	<script egret="lib" src="libs/modules/egret/egret3d.js" src-release="libs/modules/egret/egret3d.min.js"></script>
 	<!--modules_files_end-->
     <!--other_libs_files_start-->
     <!--other_libs_files_end-->
