--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     <img id="t6" src="resource/sky/cloudy_noon_DN.png" hidden="hidden" />
 </head>
 <body>
-    <div style="margin:auto;width:0%;height:0%;" class="egret-player"
+    <div style="margin:auto;width:100%;height:0%;" class="egret-player"
          data-entry-class="Main"
-         data-orientation="auto"
+         data-orientation="portrait"
          data-scale-mode="showAll"
          data-frame-rate="30"
-         data-content-width="640"
-         data-content-height="960"
+         data-content-width="480"
+         data-content-height="800"
          data-show-paint-rect="false"
          data-multi-fingered="2"
          data-show-fps="false" data-show-log="false"
