--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<!--modules_files_end-->
     <!--game_files_start-->
 	<script egret="game" src="bin-debug/CharTexture.js"></script>
-	<script egret="game" src="bin-debug/CreateView3D.js"></script>
+	<script egret="game" src="bin-debug/CreateBaseEnv.js"></script>
 	<script egret="game" src="bin-debug/CreateBox.js"></script>
 	<script egret="game" src="bin-debug/GameDataDriver.js"></script>
 	<script egret="game" src="bin-debug/FindXDataDriver.js"></script>
