--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 	<script egret="lib" src="libs/modules/egret/egret3d.min.js" src-release="libs/modules/egret/egret3d.min.js"></script>
 	<!--modules_files_end-->
     <!--game_files_start-->
+	<script egret="game" src="bin-debug/ExtraE3D.js"></script>
 	<script egret="game" src="bin-debug/GameDataDriver.js"></script>
 	<script egret="game" src="bin-debug/FindXDataDriver.js"></script>
-	<script egret="game" src="bin-debug/CharTexture.js"></script>
 	<script egret="game" src="bin-debug/CreateBaseEnv.js"></script>
 	<script egret="game" src="bin-debug/CreateGame.js"></script>
 	<script egret="game" src="bin-debug/Main.js"></script>
