修复bug: 失败时提示个数

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 	<script egret="lib" src="libs/modules/egret/egret3d.min.js" src-release="libs/modules/egret/egret3d.min.js"></script>
 	<!--modules_files_end-->
     <!--game_files_start-->
-	<script egret="game" src="bin-debug/ExtraE3D.js"></script>
-	<script egret="game" src="bin-debug/GameDataDriver.js"></script>
-	<script egret="game" src="bin-debug/FindXDataDriver.js"></script>
-	<script egret="game" src="bin-debug/CreateBaseEnv.js"></script>
-	<script egret="game" src="bin-debug/CreateGame.js"></script>
-	<script egret="game" src="bin-debug/Main.js"></script>
+	<script egret="game" src="bin-debug/ExtraE3D.min.js"></script>
+	<script egret="game" src="bin-debug/GameDataDriver.min.js"></script>
+	<script egret="game" src="bin-debug/FindXDataDriver.min.js"></script>
+	<script egret="game" src="bin-debug/CreateBaseEnv.min.js"></script>
+	<script egret="game" src="bin-debug/CreateGame.min.js"></script>
+	<script egret="game" src="bin-debug/Main.min.js"></script>
 	<!--game_files_end-->
 </head>
 <body>
