--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
 	<script egret="game" src="bin-debug/FindXDataDriver.min.js"></script>
 	<script egret="game" src="bin-debug/CreateBaseEnv.min.js"></script>
 	<script egret="game" src="bin-debug/CreateGame.min.js"></script>
-	<script egret="game" src="bin-debug/Main.min.js"></script>
 	<!--game_files_end-->
 </head>
-<body>
+<body style="pointer-event:none;">
     <div style="margin:auto;width:100%;height:0%;" class="egret-player"
          data-entry-class="Main"
          data-orientation="portrait"
