--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <!--modules_files_start-->
 	<script egret="lib" src="libs/modules/egret/egret.min.js" src-release="libs/modules/egret/egret.min.js"></script>
 	<script egret="lib" src="libs/modules/egret/egret.web.min.js" src-release="libs/modules/egret/egret.web.min.js"></script>
-	<script egret="lib" src="libs/modules/egret/egret3d.js" src-release="libs/modules/egret/egret3d.min.js"></script>
+	<script egret="lib" src="libs/modules/egret/egret3d.min.js" src-release="libs/modules/egret/egret3d.min.js"></script>
 	<!--modules_files_end-->
     <!--game_files_start-->
-	<!--script egret="game" src="bin-debug/ExtraE3D.min.js"></script>
+	<script egret="game" src="bin-debug/ExtraE3D.min.js"></script>
 	<script egret="game" src="bin-debug/GameDataDriver.min.js"></script>
 	<script egret="game" src="bin-debug/FindXDataDriver.min.js"></script>
 	<script egret="game" src="bin-debug/CreateBaseEnv.min.js"></script>
-	<script egret="game" src="bin-debug/CreateGame.min.js"></script-->
-	<script egret="game" src="bin-debug/ExtraE3D.js"></script>
+	<script egret="game" src="bin-debug/CreateGame.min.js"></script>
+	<!--script egret="game" src="bin-debug/ExtraE3D.js"></script>
 	<script egret="game" src="bin-debug/GameDataDriver.js"></script>
 	<script egret="game" src="bin-debug/FindXDataDriver.js"></script>
 	<script egret="game" src="bin-debug/CreateBaseEnv.js"></script>
-	<script egret="game" src="bin-debug/CreateGame.js"></script>
+	<script egret="game" src="bin-debug/CreateGame.js"--></script>
 	<!--game_files_end-->
 </head>
 <body style="pointer-event:none;">
