--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 	<script egret="game" src="bin-debug/CreateBaseEnv.js"></script>
 	<script egret="game" src="bin-debug/CreateGame.js"--></script>
 	<!--game_files_end-->
+    <script>
+    window.addEventListener("touchmove", function (event) { event.preventDefault(); }, false);
+    if (typeof window.devicePixelRatio != 'undefined' && window.devicePixelRatio > 2) {
+        var meta = document.getElementById("viewport");
+        meta.setAttribute('content', 'width=device-width, initial-scale=' + (2 / window.devicePixelRatio) + ', user-scalable=no');
+    }
+    </script>
 </head>
 <body style="pointer-event:none;">
     <div style="margin:auto;width:100%;height:0%;" class="egret-player"
@@ -43,6 +50,8 @@
          data-show-fps="false" data-show-log="false"
          data-log-filter="" data-show-fps-style="x:0,y:0,size:30,textColor:0x00c200,bgAlpha:0.9">
     </div>
-    <script> egret.runEgret(); </script>
+    <script>
+		egret.runEgret();
+    </script>
 </body>
 </html>
