--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!--modules_files_start-->
 	<script egret="lib" src="libs/modules/egret/egret.min.js" src-release="libs/modules/egret/egret.min.js"></script>
 	<script egret="lib" src="libs/modules/egret/egret.web.min.js" src-release="libs/modules/egret/egret.web.min.js"></script>
+	<!--script egret="lib" src="libs/modules/egret/eui.js" src-release="libs/modules/egret/eui.min.js"></script-->
 	<script egret="lib" src="libs/modules/egret/egret3d.min.js" src-release="libs/modules/egret/egret3d.min.js"></script>
 	<!--modules_files_end-->
     <!--game_files_start-->
@@ -29,20 +30,13 @@
 	<script egret="game" src="bin-debug/CreateBaseEnv.js"></script>
 	<script egret="game" src="bin-debug/CreateGame.js"--></script>
 	<!--game_files_end-->
-    <script>
-    window.addEventListener("touchmove", function (event) { event.preventDefault(); }, false);
-    if (typeof window.devicePixelRatio != 'undefined' && window.devicePixelRatio > 2) {
-        var meta = document.getElementById("viewport");
-        meta.setAttribute('content', 'width=device-width, initial-scale=' + (2 / window.devicePixelRatio) + ', user-scalable=no');
-    }
-    </script>
 </head>
 <body style="pointer-event:none;">
-    <div style="margin:auto;width:100%;height:100%;" class="egret-player"
+    <div style="margin:auto;width:100%;height:100%;z-index:1;" class="egret-player"
          data-entry-class="Main"
          data-orientation="portrait"
          data-scale-mode="showAll"
-         data-frame-rate="30"
+         data-frame-rate="60"
          data-content-width="480"
          data-content-height="800"
          data-show-paint-rect="false"
