--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<!--game_files_end-->
 </head>
 <body style="pointer-event:none;">
-    <div style="margin:auto;width:100%;height:100%;z-index:1;" class="egret-player"
+    <div style="margin:auto;width:100%;height:100%;" class="egret-player"
          data-entry-class="Main"
          data-orientation="portrait"
          data-scale-mode="showAll"
