--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script egret="lib" src="libs/modules/egret/egret.web.min.js" src-release="libs/modules/egret/egret.web.min.js"></script>
 	<!--script egret="lib" src="libs/modules/egret/eui.js" src-release="libs/modules/egret/eui.min.js"></script-->
 	<script egret="lib" src="libs/modules/egret/egret3d.min.js" src-release="libs/modules/egret/egret3d.min.js"></script>
+	<script egret="lib" src="libs/modules/egret/socket.min.js" src-release="libs/modules/egret/socket.min.js"></script>
 	<!--modules_files_end-->
     <!--game_files_start-->
 	<script egret="game" src="bin-debug/ExtraE3D.min.js"></script>
