--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
     <script>
         egret.runEgret();
     </script>
+	<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_5949997'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/stat.php%3Fid%3D5949997' type='text/javascript'%3E%3C/script%3E"));</script>
 </body>
 </html>
