--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 	<!--game_files_end-->
 </head>
 <body>
-
-    <div style="margin: auto;width: 100%;height: 100%;" class="egret-player"
+    <div style="margin: auto;width: 100%;height: 100%;z-index:1;" class="egret-player"
          data-entry-class="Main"
          data-orientation="auto"
          data-scale-mode="noScale"
